--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <body>
-    <h1>Hello world</h1>
+    <h1>This is the root doc</h1>
     <code>/index.html</code>
 
     <a href="/about">About</a>
